# IGHAStar

./: .gitignore  LICENSE  README.md  ighastar.yml  pyproject.toml
docs/: README.md  api.md  biighastar.html  configuration.md  examples.md  extending.md  generic_environment.md  index.html  quickstart.md  when_to_use.md
examples/: EXAMPLE_USAGE.md  benchmark.py  standalone_example.py
examples/BeamNG/: IGHAStarMP.py  README.md  TrackingCost.py  example.py  utils.py
examples/BeamNG/Configs/: example.yaml
examples/BeamNG/Waypoints/: 0.pkl  1.pkl
examples/Configs/: kinematic_example.yml  kinodynamic_example.yml  ros_kinodynamic_example.yml  simple_example.yml
examples/Maps/Offroad/: ditch-0.npy  ditch-0_height.npy  ditch-1.npy  ditch-1_height.npy  ditch-2_height.npy  ditch-3_height.npy  ditch-4.npy  ditch-4_height.npy  hill-0.npy  hill-0_height.npy  hill-1.npy  hill-1_height.npy  hill-2.npy  hill-2_height.npy  race-0.npy  race-0_height.npy  race-1.npy  race-1_height.npy  race-2.npy  race-2_height.npy  race-3.npy  race-3_height.npy  race-5.npy  (+2 more)
examples/ROS/: README.md  example.py  requirements.txt  utils.py
examples/standalone/: README.md  example.py  generic_integrator.py  generic_ur5e_mjx.py  utils.py
ighastar/scripts/: common_utils.py  map_generation.py
ighastar/src/: IGHAStarClass.py  Nodes.py  ighastar.cpp
scripts/: car.py  plotting.py  utils.py
src/: ighastar.cpp  kinematic.h  kinematic_cpu.h  kinodynamic.h  kinodynamic_cpu.h  simple.h
src/Environments/: README.md  kinematic.cu  kinematic.h  kinematic_cpu.h  kinodynamic.h
tests/: README.md
(+31 files in other folders)
